--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
     <!-- main article -->
     <main>
         <article>
-            <div id="bubble-map"></div>
             <h1>Why does IU have 4,838 Native American remains? </h1>
             <!-- <h2>IU graduate workers begin picketing for union recognition</h2> -->
             <div class="bylines">
@@ -116,10 +115,73 @@
                 <p id="pubdate"></p>
             </div>
             <div class="story">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
 
+                    Nibh nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Molestie ac feugiat sed
+                    lectus vestibulum mattis ullamcorper velit. Id ornare arcu odio ut. Vehicula ipsum a arcu cursus
+                    vitae congue. Imperdiet sed euismod nisi porta lorem mollis. Velit laoreet id donec ultrices
+                    tincidunt. Donec adipiscing tristique risus nec feugiat in fermentum posuere urna. Ultricies lacus
+                    sed turpis tincidunt id. Id velit ut tortor pretium. Dictum fusce ut placerat orci nulla. Turpis
+                    egestas pretium aenean pharetra magna ac placerat vestibulum. Sed blandit libero volutpat sed cras
+                    ornare arcu. Pellentesque eu tincidunt tortor aliquam nulla facilisi.</p>
+                <p>A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Nibh sed pulvinar proin
+                    gravida hendrerit lectus. In iaculis nunc sed augue lacus. Quis risus sed vulputate odio ut enim
+                    blandit volutpat. Massa id neque aliquam vestibulum morbi blandit cursus. Nisl vel pretium lectus
+                    quam id leo. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Maecenas
+                    ultricies mi eget mauris pharetra et. </p>
+                <p>
+
+                    Quis imperdiet massa tincidunt nunc pulvinar. Euismod quis viverra nibh cras pulvinar. Donec enim
+                    diam vulputate ut pharetra sit amet aliquam id. Et pharetra pharetra massa massa ultricies mi. Eget
+                    nunc lobortis mattis aliquam faucibus purus in massa tempor. Enim ut sem viverra aliquet eget. Odio
+                    ut sem nulla pharetra diam sit amet nisl suscipit. </p>
+                <h3>Where did the remains come from?</h3>
+            </div>
+            <div id="bubble-map"></div>
+            <div class="story">
+                <p class="graphic-footnote"><strong>Note:</strong> County totals are subsets of state totals. Not all
+                    data points have
+                    county
+                    information, so state totals might be higher than the total of all counties shown in that state. At
+                    least
+                    66 individuals reported by IU had no location data, and aren't shown in this map. </p>
+                <p class="graphic-footnote"><strong>Source:</strong> <a
+                        href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory" target="_blank">NAGPRA
+                        Inventories</a></p>
+
+                <p>A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Nibh sed pulvinar proin
+                    gravida hendrerit lectus. In iaculis nunc sed augue lacus. Quis risus sed vulputate odio ut enim
+                    blandit volutpat. Massa id neque aliquam vestibulum morbi blandit cursus. Nisl vel pretium lectus
+                    quam id leo. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Maecenas
+                    ultricies mi eget mauris pharetra et. </p>
+                <p>
+
+                    Quis imperdiet massa tincidunt nunc pulvinar. Euismod quis viverra nibh cras pulvinar. Donec enim
+                    diam vulputate ut pharetra sit amet aliquam id. Et pharetra pharetra massa massa ultricies mi. Eget
+                    nunc lobortis mattis aliquam faucibus purus in massa tempor. Enim ut sem viverra aliquet eget. Odio
+                    ut sem nulla pharetra diam sit amet nisl suscipit. </p>
+                <p>A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Nibh sed pulvinar proin
+                    gravida hendrerit lectus. In iaculis nunc sed augue lacus. Quis risus sed vulputate odio ut enim
+                    blandit volutpat. Massa id neque aliquam vestibulum morbi blandit cursus. Nisl vel pretium lectus
+                    quam id leo. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Maecenas
+                    ultricies mi eget mauris pharetra et. </p>
+                <p>
+
+                    Quis imperdiet massa tincidunt nunc pulvinar. Euismod quis viverra nibh cras pulvinar. Donec enim
+                    diam vulputate ut pharetra sit amet aliquam id. Et pharetra pharetra massa massa ultricies mi. Eget
+                    nunc lobortis mattis aliquam faucibus purus in massa tempor. Enim ut sem viverra aliquet eget. Odio
+                    ut sem nulla pharetra diam sit amet nisl suscipit. </p>
+                <h3>Where did the remains come from?</h3>
             </div>
             <table id="inventory-table"></table>
             <div class="story">
+
+
 
                 <!--
                     TODO: add story content!
@@ -187,9 +249,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <script src="js/population.js"></script>
     <script src="js/albersusa.js"></script>
-    <script src="files/inventory-reports.csv"></script>
+    <script src="js/colorLegend.js"></script>
     <script src="js/d3.js"></script>
     <script src="js/ids.js"></script>
     <script src="js/metadata.js"></script>
