add definition + beeswarm

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
     <!-- main article -->
     <main>
         <article>
-            <h1>Why does IU have 4,838 Native American remains? </h1>
+            <h1>Why does IU have more than 4,800 Native American ancestral remains? </h1>
+            <figure class="xl-image">
+                <img src="files/angel-mounds2.jpeg" alt="">
+                <p class="credit">courtesy of IU archives</p>
+                <p class="caption">The Angel Mounds archaeological site in Vanderburgh County, Indiana.</p>
+            </figure>
             <!-- <h2>IU graduate workers begin picketing for union recognition</h2> -->
             <div class="bylines">
                 <div id="bylines">
@@ -120,6 +125,15 @@
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                     culpa qui officia deserunt mollit anim id est laborum.</p>
+                <figure>
+                    <h4>IU has the fifth-largest collection of unrepatriated ancestral remains in the U.S.</h4>
+                    <h5>Federally funded institutions must report inventories of Native American remains under
+                        NAGPRA.</h5>
+                    <div id="beeswarm"></div>
+                    <p class="graphic-footnote" style="text-align: right;margin-top:-38px;"><strong>Source:</strong> <a
+                            href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory" target="_blank">NAGPRA
+                            Inventories</a></p>
+                </figure>
                 <p>
 
                     Nibh nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Molestie ac feugiat sed
@@ -129,11 +143,20 @@
                     sed turpis tincidunt id. Id velit ut tortor pretium. Dictum fusce ut placerat orci nulla. Turpis
                     egestas pretium aenean pharetra magna ac placerat vestibulum. Sed blandit libero volutpat sed cras
                     ornare arcu. Pellentesque eu tincidunt tortor aliquam nulla facilisi.</p>
+
+                <div class="definition-card wide-right">
+                    <p class="word">NAGPRA <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">The Native American Graves Protection & Repatriation Act, passed in 1990, xxx
+                    </p>
+                </div>
+
                 <p>A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Nibh sed pulvinar proin
                     gravida hendrerit lectus. In iaculis nunc sed augue lacus. Quis risus sed vulputate odio ut enim
                     blandit volutpat. Massa id neque aliquam vestibulum morbi blandit cursus. Nisl vel pretium lectus
                     quam id leo. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Maecenas
                     ultricies mi eget mauris pharetra et. </p>
+                <!-- <h4>Native American remains not made available for return</h4> -->
+                <!-- <div id="strip-chart"></div> -->
                 <p>
 
                     Quis imperdiet massa tincidunt nunc pulvinar. Euismod quis viverra nibh cras pulvinar. Donec enim
@@ -253,7 +276,9 @@
     <script src="js/population.js"></script>
     <script src="js/albersusa.js"></script>
     <script src="js/colorLegend.js"></script>
-    <script src="js/d3.js"></script>
+    <script src="js/stripPlot.js"></script>
+    <script src="js/bubbleMap.js"></script>
+    <script src="js/beeSwarm.js"></script>
     <script src="js/ids.js"></script>
     <script src="js/metadata.js"></script>
 </body>
