--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
                     remains to Tribes through a process called repatriation, which typically ends in reburial. But none
                     of the human remains at IU were repatriated until 24 years after this law passed, and eight years
                     after Wesley had left the university.</p>
+                <div class="definition-card wide-right">
+                    <p class="word">NAGPRA <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">Law passed in 1990 which mandates federal agencies and museums that receive
+                        federal funds to repatriate or transfer ownership of human remains, funerary objects, sacred
+                        objects and objects of cultural patrimony to lineal descendants.
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a href="https://www.blm.gov/NAGPRA">Bureau of Land
+                            Management</a></p>
+                </div>
                 <p>Slow responses to NAGPRA were not unusual, especially in the early years, when there was little
                     guidance on best practices for both institutions and Tribal Nations. 15 years after the law passed,
                     only about 40% of institutions had reported completing at least one repatriation, according to
@@ -268,10 +277,27 @@
                 <p>Not every faculty member turned a blind eye to NAGPRA. The same year Wesley started at IU, Richard
                     Wilk became the department chair of the anthropology department, and said he was concerned about
                     what he described as IU’s noncompliance with the spirit of the law.</p>
+                <div class="definition-card wide-left">
+                    <p class="word">Inventory <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">An item-by-item description of all human remains and associated funerary
+                        objects held by a federally funded institution which must be submitted to the federal
+                        government.
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a
+                            href="https://www.nps.gov/subjects/nagpra/glossary.htm">National NAGPRA</a></p>
+                </div>
                 <p>In 1990, NAGPRA set a 1995 deadline for institutions to compile an inventory of all the human remains
                     in their possession. The inventory was necessary for institutions to determine how many human
                     remains they had and figure out which remains were associated with which Tribal nations based on
                     evidence — an important step for making repatriation work possible.</p>
+                <div class="definition-card wide-right">
+                    <p class="word">Cultural affiliation <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">Shared identity between a present-day Tribal Nation with a past group. There
+                        are many ways to establish cultural affiliation.
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a
+                            href="https://www.nps.gov/subjects/nagpra/glossary.htm">National NAGPRA</a></p>
+                </div>
                 <p>Based on the original law, institutions — not Tribes — were the ones with the final say on whether
                     human remains were associated, or “culturally affiliated,” with Tribal Nations. Because of this,
                     some institutions leaned on a loophole which allowed them to mark remains as “culturally
@@ -346,6 +372,17 @@
                     archaeology, covering his field expenses and arranging for him to study at the Ohio State Museum.
                     Black and Lilly would become close friends, exchanging lengthy letters about Indiana prehistory for
                     decades and comparing their relationship to that of a father and son.</p>
+                <div class="definition-card wide-right">
+                    <p class="word">Walam Olum <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">A set of birch-bark scrolls supposedly found by scientist Constantine
+                        Rafinesque in 1833, which most historians now agree was a hoax. Rafinesque published a
+                        translation of the pictograms that he supposedly found, which detailed a lengthy origin story of
+                        the Lenape, or Delaware, Tribe.
+                    </p>
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a
+                            href="https://www.jstor.org/stable/20638640?seq=24">American Literary History</a></p>
+                </div>
                 <p>Around the same time, Lilly began a decades-long obsession with the Walam Olum, a set of birch bark
                     scrolls supposedly found and transcribed by natural scientist Constantine Rafinesque from the
                     Lenape, or Delaware, language into English in 1833, which most historians now agree was probably
@@ -402,10 +439,37 @@
                     museums, universities or private donors, which was one of the main ways anthropologists acquired
                     research materials through the 20th century other than doing their own excavations, like at Angel
                     Mounds.</p>
-                <p>[map]</p>
+                <!-- MAP OF ORIGIN OF REMAINS -->
+                <h3>Where did the remains come from?</h3>
+            </div>
+            <figure class="xl-image">
+                <div class="map-legend"></div>
+                <div id="bubble-map"></div>
+            </figure>
+            <div class="story">
+                <p class="graphic-footnote"><strong>Note:</strong> County totals are subsets of state totals. Not
+                    all
+                    data points have
+                    county
+                    information, so state totals might be higher than the total of all counties shown in that state.
+                    At
+                    least
+                    66 individuals reported by IU had no location data, and aren't shown in this map. </p>
+                <p class="graphic-footnote"><strong>Source:</strong> <a
+                        href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory" target="_blank">NAGPRA
+                        Inventories</a></p>
                 <p>Neumann, the physical anthropologist, had a particular interest in skulls, and studied at least
                     10,000 of them during his career. Sometimes he would visit other museums to examine their materials,
                     but often he would receive donated skeletal remains that would then remain at IU permanently.</p>
+                <div class="definition-card wide-left">
+                    <p class="word">Phrenology <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">The study of skull shape and size as the determinant of intelligence and
+                        character. Popular through the 20th century, but has since been scientifically disproved and is
+                        considered pseudoscience.
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a
+                            href="https://www.britannica.com/topic/phrenology">Encyclopedia Britannica</a></p>
+                </div>
                 <p>Neumann’s research fell into the category of racial classification, the pseudoscientific theory that
                     was often used in hopes of proving a genetic difference between human races by studying people’s
                     physical characteristics, a concept used to scientifically reinforce racial hierarchies. Neumann
@@ -472,6 +536,15 @@
                     whether to rebury Native American remains in Indiana, or where the Tribe was forced to relocate. It
                     can also make it harder to determine cultural affiliation, and some consultations involve upwards of
                     a dozen Tribes.</p>
+                <div class="definition-card wide-right">
+                    <p class="word">Consultation <i class="fas fa-info-circle"></i></p>
+                    <p class="definition">Meetings between representatives of institutions and Tribes to discuss how to
+                        move forward with repatriation work.
+                    </p>
+                    <p class="source"><strong>SOURCE:</strong> <a
+                            href="https://www.nps.gov/subjects/nagpra/glossary.htm">National
+                            NAGPRA</a></p>
+                </div>
                 <p>In 2018, representatives from at least 15 Tribal Nations, including Wilson, met in Bloomington to
                     consult with Jayne-Leigh and move forward with the repatriation of hundreds of Native American
                     remains that had been excavated from Angel Mounds. IU had received an $85,000 grant from National
@@ -549,13 +622,19 @@
                 <p>“Certainly there's been so many things done wrong to the American Indian,” Wilson said. “If there's
                     anything to say for the American Indian, it's that we're still here. We're vibrant. We're survivors.
                     You can recognize the past but you don't have to live the past. Acknowledge it and go on.”</p>
-                <p>About this story</p>
-                <p>The IDS spent more than three months researching NAGPRA at IU, conducting extensive interviews and
-                    reading historical documents. Reporting on the history of anthropology at IU referred to chapter 6
-                    of Eli Lilly, a Life, a 1989 biography written by James Madison; chapter 2 of Bioarchaeology: the
-                    contextual analysis of human remains by Della Collins Cook; primary documents reviewed at the IU
-                    Museum of Archaeology and Anthropology, including letters to and from Lilly, Black, Voegelin and
-                    Neumann; and interviews with IUMAA staff.</p>
+
+                <div id="methodology">
+                    <h4>About this story</h4>
+                    <p>The IDS spent more than three months researching NAGPRA at IU, conducting extensive interviews
+                        and
+                        reading historical documents. Reporting on the history of anthropology at IU referred to chapter
+                        6
+                        of Eli Lilly, a Life, a 1989 biography written by James Madison; chapter 2 of Bioarchaeology:
+                        the
+                        contextual analysis of human remains by Della Collins Cook; primary documents reviewed at the IU
+                        Museum of Archaeology and Anthropology, including letters to and from Lilly, Black, Voegelin and
+                        Neumann; and interviews with IUMAA staff.</p>
+                </div>
 
 
 
