--- a/index.html
+++ b/index.html
@@ -105,13 +105,24 @@
     <!-- main article -->
     <main>
         <article>
-            <h1>Thousands of Native American remains, a legacy of offensive research and the effort to move forward</h1>
-            <h2>How IU works to repatriate Indigenous human remains under a 1990 federal law</h2>
-            <figure class="xl-image">
+            <div class="topper">
+                <figure class="imagegrid">
+                    <img class="topper-img-1" src="files/angel-mounds2.jpeg" alt="">
+                    <img class="topper-img-2" src="files/angel-mounds2.jpeg" alt="">
+                    <img class="topper-img-3" src="files/angel-mounds2.jpeg" alt="">
+                </figure>
+                <div>
+                    <h1>Thousands of Native American remains, a legacy of offensive research and the effort to move
+                        forward
+                    </h1>
+                    <h2>How IU works to repatriate Indigenous human remains under a 1990 federal law</h2>
+                </div>
+            </div>
+            <!-- <figure class="sm-image">
                 <img src="files/angel-mounds2.jpeg" alt="">
                 <p class="credit">courtesy of IU archives</p>
                 <p class="caption">The Angel Mounds archaeological site in Vanderburgh County, Indiana.</p>
-            </figure>
+            </figure> -->
             <!-- <h2>IU graduate workers begin picketing for union recognition</h2> -->
             <div class="bylines">
                 <div id="bylines">
@@ -523,6 +534,21 @@
                 <p>There was no dedicated NAGPRA employee or office at IU until the 2012-13 school year, when the office
                     first appeared on a university budget. That’s the year Jayne-Leigh was hired, and shortly afterward,
                     she got in touch with Wilson, finally closing the loop.</p>
+            </div>
+            <div class="sidebar-note-wrapper">
+                <div class="sidebar-note-inner">
+                    <div class="small-spacer"></div>
+                    <div class="text-spacer"></div>
+                    <div class="sidebar-note">
+                        <div class="mug">
+                            <img src="https://anthropology.indiana.edu/images/profiles/profiles-768x768/adjuncts/thomas.jpg"
+                                alt="">
+                            <p><strong>Jayne-Leigh Thomas</strong> <br><em>IU NAGPRA Director</em></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
                 <p>When she first started, Jayne-Leigh said she also sent letters in the mail, but didn’t hear back from
                     most Tribal representatives, who often deal with constant communication from many institutions. So
                     she and a colleague flew to Oklahoma and visited Wilson, along with representatives from 13 other
@@ -639,43 +665,26 @@
 
 
 
-                <div class="sidebar-note-wrapper">
-                    <div class="sidebar-note-inner">
-                        <div class="small-spacer"></div>
-                        <div class="text-spacer"></div>
-                        <div class="sidebar-note">
-                            <div class="mug">
-                                <img src="https://anthropology.indiana.edu/images/profiles/profiles-768x768/adjuncts/thomas.jpg"
-                                    alt="">
-                                <p><strong>Jayne-Leigh Thomas</strong> <br><em>IU NAGPRA Director</em></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="story">
 
-
-
-
-                    <!--
+                <!--
                     TODO: add story content!
 
                     For example code of basic elements, visit our documentation on Notion: https://www.notion.so/Buildout-Documentation-4e36a30949d149e5bb074a753a88a910
                     You can also check out the kitchen sink article on Github, which contains every existing element in the template: https://github.com/ids-digi/kitchen-sink-article
                 -->
 
-                    <!-- small bios -->
-                    <div class="author-bios">
-                        <!-- update bios in metadata.json -->
-                        <!-- delete this div if you don't want them to show up -->
-                    </div>
-
-                    <p class="donate">
-                        <em>Like what you're reading?</em><br>
-                        Support independent, award-winning student journalism.
-                        <a href="https://www.idsnews.com/page/donate" target="_blank">Donate.</a>
-                    </p>
+                <!-- small bios -->
+                <div class="author-bios">
+                    <!-- update bios in metadata.json -->
+                    <!-- delete this div if you don't want them to show up -->
                 </div>
+
+                <p class="donate">
+                    <em>Like what you're reading?</em><br>
+                    Support independent, award-winning student journalism.
+                    <a href="https://www.idsnews.com/page/donate" target="_blank">Donate.</a>
+                </p>
+            </div>
         </article>
 
     </main>
