topper animation + caption

--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
             <div class="topper">
                 <figure class="imagegrid">
                     <img class="topper-img-1" src="files/angel-mounds2.jpeg" alt="">
-                    <img class="topper-img-2" src="files/angel-mounds2.jpeg" alt="">
-                    <img class="topper-img-3" src="files/angel-mounds2.jpeg" alt="">
+                    <img class="topper-img-2" src="http://purl.dlib.indiana.edu/iudl/archives/photos/large/P0031842"
+                        alt="">
+                    <img class="topper-img-3" src="http://purl.dlib.indiana.edu/iudl/archives/photos/screen/P0047093"
+                        alt="">
                 </figure>
                 <div>
                     <h1>Thousands of Native American remains, a legacy of offensive research and the effort to move
@@ -132,6 +134,10 @@
                 <p id="pubdate"></p>
             </div>
             <div class="story">
+                <p class="caption topper-caption">
+                    Caption
+                    <br><span style="display:block;" class="credit">Source</span>
+                </p>
 
                 <!-- BEESWARMS -->
                 <!-- <figure>
