--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     many human remains in the first place, IU employees and Tribal members agree the process of NAGPRA
                     today can never fully right the wrongs of the past. But it can help everyone involved move forward.
                 </p>
-                <p>***</p>
+                <p class="section-break">•••</p>
                 <p>Wesley Thomas said when he worked at IU in the early 2000s, NAGPRA was well-understood by everyone in
                     the anthropology department, faculty and graduate students, as it was a core concept taught in
                     classes. But he described it as a “hush” topic among faculty, along with other Indigenous issues.
@@ -372,7 +372,7 @@
                     different from what they were when I was in graduate school in the ‘80s,” Pyburn said.</p>
                 <p>The problematic past of anthropology is clear from the story of how IU acquired so many human
                     remains.</p>
-                <p>***</p>
+                <p class="section-break">•••</p>
                 <p>For most of the history of anthropology, Native Americans have been viewed as objects of scientific
                     study rather than people. This worldview was baked into IU’s anthropology department from the start,
                     and led to the accumulation of more than 5,800 Native human remains, one of the largest reported
@@ -526,7 +526,7 @@
                 <p>“As far as trying to understand the logic behind it and all that kind of stuff, I can't even begin to
                     go there,” she said. “I don't know. But anyway, there's lots of human remains out there, and they
                     still have to be reburied.</p>
-                <p>***</p>
+                <p class="section-break">•••</p>
                 <p>In the early 1990s, Wilson, received a letter from the Glenn Black Lab at IU notifying her that IU
                     had human remains likely affiliated with the Quapaw. Because of a combination of factors, those
                     remains wouldn’t be repatriated until 2021.</p>
@@ -600,7 +600,7 @@
                     with NAGPRA, said he was very happy to see IU establish a NAGPRA Office, and has been impressed with
                     the office’s progress in the decade since.</p>
                 <p>“It was much delayed. But when the university finally woke up, they really woke up,” Wilk said.</p>
-                <p>***</p>
+                <p class="section-break">•••</p>
                 <p>NAGPRA has received more attention recently after ProPublica published an investigation into public
                     repatriation data in early January, which called out IU in particular for the large size of its
                     collection of human remains. But Wilson and multiple IU faculty expressed concerns about the effect
